hot fix align buttons x2

--- a/src/components/slider.scss
+++ b/src/components/slider.scss
@@ -39,6 +39,12 @@ $accent-color: #527CCD;
   gap: 40px
 }
 
+.slider-header-buttons{
+  display: flex;
+  gap: 40px;
+}
+
+
 .slider-header-button{
   height: 60px;
   width: 60px;
